kubernetes/ip_location_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-location-server
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ip-location-server
  template:
    metadata:
      labels:
        app: ip-location-server
    spec:
      containers:
      - name: ip-location-server
        image: ip_location_server:latest
---
apiVersion: v1
kind: Service
metadata:
  name: ip-location-server-service
  namespace: production
spec:
  selector:
    app: ip-location-server
  ports:
  - name: http-endpoint
    protocol: TCP
    port: 80
    targetPort: 80
  - name: grpc-endpoint
    protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
